2007-02-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_jid.erl: Reworked JID parsing to handle more error cases.
	Now, the resource for a bare JID is set to `undefined', not the empty
	string.

2007-02-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_stringprep.erl: New frontend for the exmpp_stringprep_drv
	port driver.

	* src/exmpp_internals.erl: New module which provide low-level
	functions for port drivers handling.

	* src/exmpp_sup.erl: Supervisor who is responsible for
	exmpp_stringprep startup.

	* src/exmpp.erl, ebin/exmpp.app.in: This module uses the `application'
	behaviour now. It starts `exmpp_sup'.

	* src/exmpp_jid.erl: New module which provides functions to manipulate
	JIDs.

	* src/Emakefile.in, src/Makefile.am, ebin/Makefile.am: Link each new
	modules to the build.

	* testsuite/check_jid.erl, testsuite/Emakefile.in,
	testsuite/Makefile.am: Add a first testsuite for `exmpp_jid'.

2007-02-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/uni_data.c, c_src/uni_norm.c, c_src/stringprep_uni_data.h,
	c_src/stringprep_uni_norm.h: Renamed as real headers.

	* c_src/stringprep_drv.c: Internal name of the driver changed to
	`exmpp_stringprep_erl'.

	* c_src/exmpp_stringprep_drv.c, c_src/exmpp_stringprep_drv.c,
	c_src/Makefile.am, src/stringprep.erl, priv/lib/Makefile.am: Prefixed
	`stringprep_drv' with `exmpp_' to avoid conflicts with ejabberd's own
	stringprep_drv. This permits exmpp to coexist with ejabberd.

2007-01-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Next branch will be 0.7.

2007-01-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Fixed the name of a variable.

2007-01-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Head is now the future 0.6 branch. Dropped
	`EXMPP_BUILD_ID'. Debug is disabled by default when
	`EXMPP_RELEASE_DATE' is set and enabled otherwise. Comments translated
	in english.
