@@ -4,6 +4,9 @@
 	Now, the resource for a bare JID is set to `undefined', not the empty
 	string.
 
+	* testsuite/check_jid.erl: The testsuite for the current state of
+	`exmpp_jid' is complete.
+
 2007-02-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/exmpp_stringprep.erl: New frontend for the exmpp_stringprep_drv
